fixed nav aligning for characters and episodes sections

--- a/docroot/sites/usanetwork/themes/aurora_usa/usanetwork_microsite_themes/dig/css/ms_episodes.css
+++ b/docroot/sites/usanetwork/themes/aurora_usa/usanetwork_microsite_themes/dig/css/ms_episodes.css
@@ -127,13 +127,10 @@
 }
 #microsite #episodes .episode-nav #nav-prev,
 #microsite #episodes .episode-nav #nav-next {
-  margin: 0;
+  margin: -9px 0 0;
   padding: 0;
   position: relative;
   top: 50%;
-  -webkit-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
   width: 20px;
   font-size: 1.5em;
   cursor: pointer;
